--- a/Aayra/home.html
+++ b/Aayra/home.html
@@ -84,7 +84,7 @@
 <body>
    <!-- banner bg main start -->
    <div class="banner_bg_main">
-      <div class=" logotext  "><a href="index.html"></a><b>AAYRA</b></div>
+      <div class=" logotext  "><a href="home.html"></a><b>AAYRA</b></div>
       
       <!-- header top section start -->
 
@@ -106,7 +106,7 @@
                 
                <div id="mySidenav" class="sidenav">
                   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-                  <a href="index.html">Home</a>
+                  <a href="home.html">Home</a>
                   <a href="categorypainting.html">Paintings</a>
                   <a href="categoryperspainting.html">Personalized Paintings</a>
                   <a href="categorycraft.html">Craft</a>
@@ -152,7 +152,7 @@
                               <span class="padding_10"><b>Sign In</b></span></a>
                         </li>
 
-                        <li class="logoscroll"><a href="index.html">
+                        <li class="logoscroll"><a href="home.html">
                            <span class="padding_10 ls"><b>AAYRA</b></span></a>
                      </li>
 
