--- a/home.html
+++ b/home.html
@@ -472,7 +472,7 @@
                <div class="container-fluid">
                   <h1 class="fashion_taital" style="font-family: 'Satisfy', cursive;">Paintings</h1>
                   <div class="fashion_section_2" >
-                     <div class="row cont">
+                     <div class="row cont2">
                         <div class="col-lg-3 col-sm-4" style="padding-top: 30px !important;">
                            <a href="product.html">
                            <div class="box_main" >
@@ -562,7 +562,7 @@
                <div class="container-fluid">
                   <h1 class="fashion_taital" style="font-family: 'Satisfy', cursive;">Paintings</h1>
                   <div class="fashion_section_2" >
-                     <div class="row cont">
+                     <div class="row cont3">
                         <div class="col-lg-3 col-sm-4" style="padding-top: 30px !important;">
                            <a href="product.html">
                            <div class="box_main" >
