--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
    <meta name="author" content="">
 
      <!-- Slick -->
-  <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+  <link rel="stylesheet" type="text/css" href="app/vendor/slick/slick.css" />
 
    <!-- bootstrap css -->
    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -67,13 +67,13 @@
    <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
    <link href="https://fonts.googleapis.com/css2?family=Satisfy&display=swap" rel="stylesheet">
 
-     <!-- Vendor CSS Files -->
-  <link href="vendor/animate.css/animate.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+     <!-- app/vendor CSS Files -->
+  <link href="app/vendor/animate.css/animate.min.css" rel="stylesheet">
+  <link href="app/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="app/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="app/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="app/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="app/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -742,12 +742,12 @@
 
    });
  </script>
-  <!-- Vendor JS Files -->
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <script src="vendor/glightbox/js/glightbox.min.js"></script>
-  <script src="vendor/isotope-layout/isotope.pkgd.min.js"></script>
-  <script src="vendor/php-email-form/validate.js"></script>
-  <script src="vendor/swiper/swiper-bundle.min.js"></script>
+  <!-- app/vendor JS Files -->
+  <script src="app/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="app/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="app/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="app/vendor/php-email-form/validate.js"></script>
+  <script src="app/vendor/swiper/swiper-bundle.min.js"></script>
 
 
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -757,7 +757,7 @@
   
      
     <script src="http://code.jquery.com/ui/1.9.2/jquery-ui.js"></script>
-    <script type="text/javascript" src="vendor/slick/slick.min.js"></script>
+    <script type="text/javascript" src="app/vendor/slick/slick.min.js"></script>
 
     <script src="js/flexslider.js"></script>
 
