--- a/mycart.html
+++ b/mycart.html
@@ -171,8 +171,8 @@
     <div class="px-4 px-lg-0 pt-4">
         <!-- For demo purpose -->
         <div class="container text-white py-5 text-center">
-          <h1 class="display-4" style="font-family: 'Kalam', cursive;">My Cart</h1>
-          <p class="lead mb-0">You are just a step away from owning your favourite masterpieces.</p>
+          <h1 class="display-4" style="font-family: 'Kalam', cursive; color: #ff9000;">My Cart</h1>
+          <p class="lead mb-0" style="color: black !important;">You are just a step away from owning your favourite masterpieces.</p>
           <p class="lead">Hurry Up !!
           </p>
         </div>
