--- a/product.html
+++ b/product.html
@@ -210,7 +210,7 @@
             <div class="row"><p style="margin-left: -6px;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque quas quasi ipsam pariatur doloremque saepe hic beatae voluptatum, eos enim quaerat deserunt aliquid nisi, ex harum blanditiis. Non, quo recusandae?voluptatum, eos enim quaerat deserunt aliquid nisi, ex harum blanditiis. Non, quo recusandae</p></div>
             <hr>
 
-            <div class="sellername">Seller : Sanskar Agarwal </div>
+            <div class="sellername">Seller : Rahul Kumar </div>
             <div class="productprice">Price : Rs. 9999 </div>
 
             <div class="row btdd"> <button type="button" class="btn btn-danger">Add To Cart</button> </div>
@@ -268,7 +268,7 @@
                     <li>100cm</li>
                     <li>20cm</li>
                     <li>100g</li>
-                    <li>Sanskar Agarwal</li>
+                    <li>Rahul Kumar</li>
                 </ul>
             </div>
         </div>
@@ -377,7 +377,7 @@
                         <div class="col-lg-2"> <img class="profile-pic" src="images/testimonials/testimonials-1.jpg"> </div>
 
                         <div class="col-lg-8 ">
-                            <h3 class="mt-0 mb-0 ml-0 nm">Sanskar Agarwal</h3>
+                            <h3 class="mt-0 mb-0 ml-0 nm">Raju</h3>
                             <div class="stars">
                                 <p class="text-center"><span class="" style="color: white !important;">4.0</span> <span class="fa fa-star star-active ml-3"></span> <span class="fa fa-star star-active"></span> <span class="fa fa-star star-active"></span> </p>
                             </div>
@@ -409,7 +409,7 @@
                       <div class="col-lg-2"> <img class="profile-pic" src="images/testimonials/testimonials-2.jpg"> </div>
 
                       <div class="col-lg-8 ">
-                          <h3 class="mt-0 mb-0 ml-0 nm">Sanskar Agarwal</h3>
+                          <h3 class="mt-0 mb-0 ml-0 nm">Rishabh kumar</h3>
                           <div class="stars">
                               <p class="text-center"><span class="" style="color: white !important;">4.0</span> <span class="fa fa-star star-active ml-3"></span> <span class="fa fa-star star-active"></span> <span class="fa fa-star star-active"></span> </p>
                           </div>
@@ -442,7 +442,7 @@
                    <div class="col-lg-2"> <img class="profile-pic" src="images/testimonials/testimonials-3.jpg"> </div>
 
                    <div class="col-lg-8 ">
-                       <h3 class="mt-0 mb-0 ml-0 nm">Sanskar Agarwal</h3>
+                       <h3 class="mt-0 mb-0 ml-0 nm">Jack Ma</h3>
                        <div class="stars">
                            <p class="text-center"><span class="" style="color: white !important;">4.0</span> <span class="fa fa-star star-active ml-3"></span> <span class="fa fa-star star-active"></span> <span class="fa fa-star star-active"></span> </p>
                        </div>
