--- a/profile.html
+++ b/profile.html
@@ -175,8 +175,8 @@
                         
                     </div>
                 </div>
-                <div class="bg-light p-4 d-flex  justify-content-center text-center" style="height: 300px;">
-                    <span class="name"><b>Sanskar Agarwal</b><br> 
+                <div class="bg-light p-4 d-flex  justify-content-center text-center" style="height: 300px;box-shadow: 0px 0px 30px;">
+                    <span class="name"><b>Jack Robert</b><br> 
 
                         <span class="place">New York</span><br>
                         <span class="place"><a href="#" class="fa fa-facebook profilefa"></a>
@@ -261,7 +261,7 @@
          <div class="carousel-inner">
             <div class="carousel-item active">
                <div class="container-fluid">
-                  <h1 class="fashion_taital" style="font-family: 'Satisfy', cursive;">Latest Masterpieces by Sanskar</h1>
+                  <h1 class="fashion_taital" style="font-family: 'Satisfy', cursive;">Latest Masterpieces by Robert</h1>
                   <div class="fashion_section_2" >
                      <div class="row cont">
                         <div class="col-lg-3 col-sm-4" style="padding-top: 30px !important;">
