--- a/categoryperspainting.html
+++ b/categoryperspainting.html
@@ -170,7 +170,7 @@
              <div class="carousel-inner" role="listbox">
      
                <!-- Slide 1 -->
-               <div class="carousel-item active" style="background: url(images/personalizedp.jpg) no-repeat center fixed;background-size: 100% 100% !important;z-index: 1; filter: brightness(130%) !important;
+               <div class="carousel-item active s1" style="background: url(images/personalizedp.jpg) no-repeat center fixed;background-size: 100% 100% !important;z-index: 1; filter: brightness(130%) !important;
                -webkit-filter: brightness(130%) !important;
                -moz-filter: brightness(50%);
                -o-filter: brightness(50%);
