--- a/categorypainting.html
+++ b/categorypainting.html
@@ -896,6 +896,7 @@
      $('.fa-user').toggleClass('scrolled', $(this).scrollTop() > 100);
      $('.logotext').toggleClass('scrolled', $(this).scrollTop() > 100);
      $('.main').toggleClass('scrolled', $(this).scrollTop() > 100);
+     $('.input-group').toggleClass('scrolled', $(this).scrollTop() > 100);
 
    });
  </script>
